[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject.toml"
dynamic = ["version"]
license = {file = "LICENSE"}
authors = [
  { name="John Garrett", email="garrettj403@gmail.com" },
]
description = "Calculate the properties of rectangular waveguides"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Waveguide"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.setuptools_scm]
version_file = "waveguide/_version.py"
version_scheme = "post-release"

[project.urls]
Homepage = "https://github.com/garrettj403/Waveguide/"
